# pygotchi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  setup.py
pygotchi/: Tama.py  Tamagotchi.py  __init__.py  __main__.py  app.py  conversion.py  images.py
pygotchi/www/: index.html  script.js  styles.css
src/: Tamagotchi.cpp  tamalib.cpp  tamalib.h
