[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pygotchi"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "pybind11",
    "matplotlib",
    "numpy",
    "thread6",
    "fastapi",
    "uvicorn",
    "jinja2",
    "asyncio",
    "python-multipart",
]

